@@ -1,48 +1,48 @@
 package net.javaguides.springboot.service.impl;
 
-import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import net.javaguides.springboot.dto.UserDto;
 import net.javaguides.springboot.entity.User;
+import net.javaguides.springboot.exception.ResourceNotFoundException;
 import net.javaguides.springboot.mapper.AutoUserMapper;
-import net.javaguides.springboot.mapper.UserMapper;
 import net.javaguides.springboot.repository.UserRepository;
 import net.javaguides.springboot.service.UserService;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
-    private final AutoUserMapper mapper;   // <-- инжектим бин
+    private final AutoUserMapper mapper;
 
     @Override
     public UserDto createUser(UserDto userDto) {
-        User user = mapper.toUser(userDto);                 // было AutoUserMapper.MAPPER...
+        User user = mapper.toUser(userDto);
         User saved = userRepository.save(user);
-        return mapper.toUserDto(saved);                     // было AutoUserMapper.MAPPER...
+        return mapper.toUserDto(saved);
     }
 
     @Override
     public UserDto getUserByID(Long userId) {
-        return null;
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
+        return mapper.toUserDto(user);
     }
 
     @Override
     public List<UserDto> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(mapper::toUserDto)                     // было через MAPPER
-                .toList();
+                .map(mapper::toUserDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public UserDto updateUser(UserDto dto) {
-        User existing = userRepository.findById(dto.getId()).orElseThrow();
+        User existing = userRepository.findById(dto.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", dto.getId()));
         existing.setFirstName(dto.getFirstName());
         existing.setLastName(dto.getLastName());
         existing.setEmail(dto.getEmail());
@@ -51,6 +51,8 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void deleteUser(Long userId) {
-
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
+        userRepository.delete(user);
     }
 }
